--- a/src/style.css
+++ b/src/style.css
@@ -42,6 +42,9 @@ li:first-letter {
   color: #0d6efd;
   margin-top: 20px;
 }
+a {
+  text-decoration-line: none;
+}
 
 #icon {
   vertical-align: top;
@@ -55,7 +58,18 @@ li:first-letter {
 }
 .weather-app {
   padding: 25px;
-  border: 1px solid #dadde1;
+  border: 1px solid #1264a3;
   border-radius: 5px;
   font-family: Arial, Helvetica, sans-serif;
+}
+.btn-search {
+  padding-left: 0;
+}
+#btn-current-location {
+  background-color: #1264a3;
+  color: antiquewhite;
+}
+
+#btn-current-location:hover {
+  background-color: #0d4c7c;
 }
