--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@ li {
   list-style: none;
   margin: 0;
   padding: 0;
-  color: #7c7c7c;
+  color: #5a6275;
   font-size: 16pt;
   font-weight: 100;
 }
@@ -79,4 +79,7 @@ a:hover {
 
 #btn-current-location:hover {
   background-color: #0d4c7c;
+}
+.open-source {
+  color: #1264a3;
 }
