--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,6 @@ li:first-letter {
 }
 .weather-temperature {
   margin-top: 10px;
-  margin-right: 5px;
   display: flex;
 }
 .weather-temperature strong {
@@ -65,20 +64,13 @@ a:hover {
 }
 .weather-app {
   padding: 25px;
-  border: 1px solid #1264a3;
+  border: 2px solid #1264a3;
   border-radius: 5px;
   font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(63, 135, 166, 0.2);
 }
 .btn-search {
   padding-left: 0;
-}
-#btn-current-location {
-  background-color: #1264a3;
-  color: antiquewhite;
-}
-
-#btn-current-location:hover {
-  background-color: #0d4c7c;
 }
 .open-source {
   color: #1264a3;
