--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,9 @@
+body {
+  background-color: #dfe5f9;
+}
+.container {
+  margin-bottom: 60px;
+}
 h1 {
   color: #5a6275;
   font-size: 24pt;
@@ -61,9 +67,12 @@ a:hover {
 }
 .weather-app-wrapper {
   max-width: 600px;
-  margin: 30px auto;
+  margin: 80px auto;
+
+  border-radius: 5px;
 }
 .weather-app {
+  background-color: whitesmoke;
   padding: 25px;
   border: 2px solid #1264a3;
   border-radius: 5px;
